--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <title>Homepage | Portfolio van Patricia</title>
     <link rel="stylesheet" href="./website/css/navbar.css">
     <link rel="stylesheet" href="./website/css/home.css">
-    <link rel="icon" type="image/x-icon" href="/assets/P_logo.svg">
+    <link rel="icon" type="image/x-icon" href="./assets/P_logo.svg">
 </head>
 <body>
     <nav id="navbar_main">
         <div class="nav__content">
-            <div class="logo"><a href="/home.html">Patricia</a></div>
+            <div class="logo"><a href="./home.html">Patricia</a></div>
             <label for="check" class="checkbox">
-                <img src="/assets/menu.png" alt="">
+                <img src="./assets/menu.png" alt="">
             </label>
             <input type="checkbox" name="check" id="check">
             <ul>
-                <li><a href="/home.html">Home</a></li>
-                <li><a href="/website/html/portfolio.html" class="portfolio_nav">Portfolio</a></li>
-                <li><a href="/website/html/contact.html">Contact</a></li>
-                <li><a href="/website/html/over_mij.html">Over mij</a></li>
+                <li><a href="./home.html">Home</a></li>
+                <li><a href="./website/html/portfolio.html" class="portfolio_nav">Portfolio</a></li>
+                <li><a href="./website/html/contact.html">Contact</a></li>
+                <li><a href="./website/html/over_mij.html">Over mij</a></li>
             </ul>
         </div>
     </nav>
@@ -36,12 +36,12 @@
                     Bedankt voor het bezoeken van mijn website! Ik maak graag nieuwe websites en programma's. <br>Leerzaam, altijd open voor nieuwe kennis, analytisch. <br>Voor meer informatie over mijn werk en mij zie onderaan mijn Portfolio en Over mij pagina.
                 </p>
                 <div class="action_btn">
-                    <a href="/website/html/portfolio.html"><button class="portfolio-button">Portfolio</button></a>
-                    <a href="/website/html/over_mij.html"><button class="overmij-button">Over mij</button></a>
+                    <a href="./website/html/portfolio.html"><button class="portfolio-button">Portfolio</button></a>
+                    <a href="./website/html/over_mij.html"><button class="overmij-button">Over mij</button></a>
                 </div>
             </div>
             <div class="image">
-                <img src="/assets/portfolio.jpg" alt="profile_img">
+                <img src="./assets/portfolio.jpg" alt="profile_img">
             </div>
         </div>
     </section>
