--- a/website/html/contact.html
+++ b/website/html/contact.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Portfolio van Patricia</title>
-    <link rel="stylesheet" href="/website/css/navbar.css">
-    <link rel="stylesheet" href="/website/css/contact.css">
-    <link rel="icon" type="image/x-icon" href="/assets/P_logo.svg">
+    <link rel="stylesheet" href="./website/css/navbar.css">
+    <link rel="stylesheet" href="./website/css/contact.css">
+    <link rel="icon" type="image/x-icon" href="./assets/P_logo.svg">
 </head>
 <body>
     <nav id="navbar_main">
         <div class="nav__content">
-            <div class="logo"><a href="/home.html">Patricia</a></div>
+            <div class="logo"><a href="./home.html">Patricia</a></div>
             <label for="check" class="checkbox">
-                <img src="/assets/menu.png" alt="">
+                <img src="./assets/menu.png" alt="">
             </label>
             <input type="checkbox" name="check" id="check">
             <ul>
-                <li><a href="/home.html">Home</a></li>
-                <li><a href="/website/html/portfolio.html" class="portfolio_nav">Portfolio</a></li>
-                <li><a href="/website/html/contact.html">Contact</a></li>
-                <li><a href="/website/html/over_mij.html">Over mij</a></li>
+                <li><a href="./home.html">Home</a></li>
+                <li><a href="./website/html/portfolio.html" class="portfolio_nav">Portfolio</a></li>
+                <li><a href="./website/html/contact.html">Contact</a></li>
+                <li><a href="./website/html/over_mij.html">Over mij</a></li>
             </ul>
         </div>
     </nav>
@@ -42,7 +42,7 @@
                 <div class="kaartjes">
                     <div class="kaartje_inhoud">
                         <div class="kaartje_een">
-                            <img src="/assets/email.svg" alt=""> 
+                            <img src="./assets/email.svg" alt=""> 
                             <div class="kaartje_text">
                                 <h3 class="kaartje_hoofd">
                                     <p>E-mail mij</p>
@@ -59,7 +59,7 @@
                 <div class="kaartjes">   
                     <div class="kaartje_inhoud">
                         <div class="kaartje_twee">
-                            <img src="/assets/call.png" alt=""> 
+                            <img src="./assets/call.png" alt=""> 
                             <div class="kaartje_text">
                                 <h3 class="kaartje_hoofd">
                                     <p>Bel mij</p>
@@ -77,7 +77,7 @@
                 <div class="kaartjes">   
                     <div class="kaartje_inhoud">
                         <div class="kaartje_twee">
-                            <img src="/assets/square-github.svg" alt=""> 
+                            <img src="./assets/square-github.svg" alt=""> 
                             <div class="kaartje_text">
                                 <h3 class="kaartje_hoofd">
                                     <p>Github profiel</p>
@@ -94,7 +94,7 @@
                 <div class="kaartjes">   
                     <div class="kaartje_inhoud">
                         <div class="kaartje_twee">
-                            <img src="/assets/linkedin.svg" alt=""> 
+                            <img src="./assets/linkedin.svg" alt=""> 
                             <div class="kaartje_text">
                                 <h3 class="kaartje_hoofd">
                                     <p>Linkedin profiel</p>
