--- a/website/html/portfolio.html
+++ b/website/html/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Portfolio van Patricia</title>
     <link rel="stylesheet" href="./website/css/navbar.css">
-    <link rel="stylesheet" href="./website/css/portfolio.css">
+    <link rel="stylesheet" href="portfolio.css">
     <link rel="icon" type="image/x-icon" href="./assets/P_logo.svg">
 </head>
 <body>
