--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage | Portfolio van Patricia</title>
-    <link rel="stylesheet" href="./website/css/navbar.css">
-    <link rel="stylesheet" href="./website/css/home.css">
-    <link rel="icon" type="image/x-icon" href="./assets/P_logo.svg">
+    <link rel="stylesheet" href="website/css/navbar.css">
+    <link rel="stylesheet" href="website/css/home.css">
+    <link rel="icon" type="image/x-icon" href="assets/P_logo.svg">
 </head>
 <body>
     <nav id="navbar_main">
