--- a/website/html/over_mij.html
+++ b/website/html/over_mij.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Over mij | Portfolio van Patricia</title>
-    <link rel="stylesheet" href="./website/css/navbar.css">
-    <link rel="stylesheet" href="./website/css/over_mij.css">
-    <link rel="icon" type="image/x-icon" href="./assets/P_logo.svg">
+    <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/over_mij.css">
+    <link rel="icon" type="image/x-icon" href="../../assets/P_logo.svg">
 </head>
 <body>
 
     <nav id="navbar_main">
         <div class="nav__content">
-            <div class="logo"><a href="./home.html">Patricia</a></div>
+            <div class="logo"><a href="../../index.html">Patricia</a></div>
             <label for="check" class="checkbox">
-                <img src="./assets/menu.png" alt="">
+                <img src="../../assets/menu.png" alt="">
             </label>
             <input type="checkbox" name="check" id="check">
             <ul>
-                <li><a href="./home.html">Home</a></li>
-                <li><a href="./website/html/portfolio.html" class="portfolio_nav">Portfolio</a></li>
-                <li><a href="./website/html/contact.html">Contact</a></li>
-                <li><a href="./website/html/over_mij.html">Over mij</a></li>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="portfolio.html" class="portfolio_nav">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="over_mij.html">Over mij</a></li>
             </ul>
         </div>
     </nav>
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="over_mij_foto">
-                <img src="./assets/portfolio_overmij.jpg" alt="">
+                <img src="../../assets/portfolio_overmij.jpg" alt="">
                 <p class="bron">Foto: Patricia</p>
             </div>
 
