--- a/website/html/portfolio.html
+++ b/website/html/portfolio.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Portfolio van Patricia</title>
-    <link rel="stylesheet" href="./website/css/navbar.css">
-    <link rel="stylesheet" href="portfolio.css">
-    <link rel="icon" type="image/x-icon" href="./assets/P_logo.svg">
+    <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/portfolio.css">
+    <link rel="icon" type="image/x-icon" href="../../assets/P_logo.svg">
 </head>
 <body>
     <nav id="navbar_main">
         <div class="nav__content">
-            <div class="logo"><a href="./home.html">Patricia</a></div>
+            <div class="logo"><a href="../../index.html">Patricia</a></div>
             <label for="check" class="checkbox">
-                <img src="./assets/menu.png" alt="">
+                <img src="../../assets/menu.png" alt="">
             </label>
             <input type="checkbox" name="check" id="check">
             <ul>
-                <li><a href="./home.html">Home</a></li>
-                <li><a href="./website/html/portfolio.html" class="portfolio_nav">Portfolio</a></li>
-                <li><a href="./website/html/contact.html">Contact</a></li>
-                <li><a href="./website/html/over_mij.html">Over mij</a></li>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="portfolio.html" class="portfolio_nav">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="over_mij.html">Over mij</a></li>
             </ul>
         </div>
     </nav>
@@ -42,20 +42,20 @@
 
                     <div class="fotos-bon">
 
-                        <img class="desktop-bon" src="./assets/portfolio_fotos/project_reisbureau_website/bontravel.png" alt="">
-                        <img class="desktop-bon" src="./assets/portfolio_fotos/project_reisbureau_website/bontravel1.png" alt="">
-                        <img class="desktop-bon" src="./assets/portfolio_fotos/project_reisbureau_website/bontravel2.png" alt="">
-                        <img class="desktop-bon" src="./assets/portfolio_fotos/project_reisbureau_website/bontravel3.png" alt="">
+                        <img class="desktop-bon" src="../../assets/portfolio_fotos/project_reisbureau_website/bontravel.png" alt="">
+                        <img class="desktop-bon" src="../../assets/portfolio_fotos/project_reisbureau_website/bontravel1.png" alt="">
+                        <img class="desktop-bon" src="../../assets/portfolio_fotos/project_reisbureau_website/bontravel2.png" alt="">
+                        <img class="desktop-bon" src="../../assets/portfolio_fotos/project_reisbureau_website/bontravel3.png" alt="">
                     
                     </div>
 
                     <div class="fotos-bon">
 
-                        <img class="desktop-bon" src="./assets/portfolio_fotos/project_reisbureau_website/bontravel4.png" alt="">
-                        <img class="desktop-bon" src="./assets/portfolio_fotos/project_reisbureau_website/bontravel5.png" alt="">
-                        <img class="desktop-bon" src="./assets/portfolio_fotos/project_reisbureau_website/bontravel6.png" alt="">
-                        <img class="desktop-bon" src="./assets/portfolio_fotos/project_reisbureau_website/bontravel7.png" alt="">
-                        <img class="desktop-bon" src="./assets/portfolio_fotos/project_reisbureau_website/bontravel8.png" alt="">
+                        <img class="desktop-bon" src="../../assets/portfolio_fotos/project_reisbureau_website/bontravel4.png" alt="">
+                        <img class="desktop-bon" src="../../assets/portfolio_fotos/project_reisbureau_website/bontravel5.png" alt="">
+                        <img class="desktop-bon" src="../../assets/portfolio_fotos/project_reisbureau_website/bontravel6.png" alt="">
+                        <img class="desktop-bon" src="../../assets/portfolio_fotos/project_reisbureau_website/bontravel7.png" alt="">
+                        <img class="desktop-bon" src="../../assets/portfolio_fotos/project_reisbureau_website/bontravel8.png" alt="">
                     
                     </div>
                 </div>
@@ -68,10 +68,10 @@
                         <p>Deze website! Simpel portfolio website heb ik gemaakt alleen met behulp van HTML en CSS Flexbox.</p>
                     </div>
                     <div class="fotos">
-                        <img class="desktop" src="./assets/portfolio_fotos/project 1/project4.1.png" alt="">
-                        <img class="desktop" src="./assets/portfolio_fotos/project 1/project4.2.png" alt="">
-                        <img class="desktop" src="./assets/portfolio_fotos/project 1/project4.3.png" alt="">
-                        <img class="desktop" src="./assets/portfolio_fotos/project 1/project4.4.png" alt="">
+                        <img class="desktop" src="../../assets/portfolio_fotos/project 1/project4.1.png" alt="">
+                        <img class="desktop" src="../../assets/portfolio_fotos/project 1/project4.2.png" alt="">
+                        <img class="desktop" src="../../assets/portfolio_fotos/project 1/project4.3.png" alt="">
+                        <img class="desktop" src="../../assets/portfolio_fotos/project 1/project4.4.png" alt="">
                     </div>
                 </div>
             </div> 
@@ -83,9 +83,9 @@
                         <p>Dit is een muziekspeler Study FM. Hij speelt ambient, lofi muziek voor verbeterde concentratie tijdens het studeren. Gemaakt met vanilla Javascript. Zie het hele project op mijn Github profiel.</p>
                     </div>
                     <div class="fotos">
-                        <img class="desktop" src="./assets/portfolio_fotos/project 2/musicp.png" alt="">
-                        <img class="desktop" src="./assets/portfolio_fotos/project 2/musicp1.png" alt="">
-                        <img class="desktop" src="./assets/portfolio_fotos/project 2/musicp2.png" alt="">
+                        <img class="desktop" src="../../assets/portfolio_fotos/project 2/musicp.png" alt="">
+                        <img class="desktop" src="../../assets/portfolio_fotos/project 2/musicp1.png" alt="">
+                        <img class="desktop" src="../../assets/portfolio_fotos/project 2/musicp2.png" alt="">
                     </div>
                 </div>
             </div> 
@@ -97,8 +97,8 @@
                         <p>Deze slider draait automatisch of gewoon bij het klikken op een van de knopjes. Prima onderdeel voor een grotere website. Gemaakt met vanilla Javascript. Zie het hele project op mijn Github profiel.</p>
                     </div>
                     <div class="fotos">
-                        <img class="desktop" src="./assets/portfolio_fotos/project 3/slider.png" alt="">
-                        <img class="desktop" src="./assets/portfolio_fotos/project 3/slider1.png" alt="">
+                        <img class="desktop" src="../../assets/portfolio_fotos/project 3/slider.png" alt="">
+                        <img class="desktop" src="../../assets/portfolio_fotos/project 3/slider1.png" alt="">
                     </div>
                 </div>
             </div> 
@@ -110,9 +110,9 @@
                         <p>Dit is mijn eerste project in React. TicTacToe vind ik heel plezierig en met React het was ook heel makkelijk om te maken. Er lopen ook audioeffecten bij het klikken en bij het winnen/verliezen van het spel. Zie het hele project op mijn Github profiel.</p>
                     </div>
                     <div class="fotos">
-                        <img class="desktop" src="./assets/portfolio_fotos/project 4/tic.png" alt="">
-                        <img class="desktop" src="./assets/portfolio_fotos/project 4/tic1.png" alt="">
-                        <img class="desktop" src="./assets/portfolio_fotos/project 4/tic2.png" alt="">
+                        <img class="desktop" src="../../assets/portfolio_fotos/project 4/tic.png" alt="">
+                        <img class="desktop" src="../../assets/portfolio_fotos/project 4/tic1.png" alt="">
+                        <img class="desktop" src="../../assets/portfolio_fotos/project 4/tic2.png" alt="">
                     </div>
                 </div>
             </div> 
@@ -124,8 +124,8 @@
                         <p>Deze Github API haalt informaties uit Github en laat ze zien op mijn webpagina. Gemaakt met vanilla Javascript. Zie het hele project op mijn Github profiel.</p>
                     </div>
                     <div class="fotos">
-                        <img class="desktop" src="./assets/portfolio_fotos/project 5/githubapi.png" alt="">
-                        <img class="desktop" src="./assets/portfolio_fotos/project 5/githubapi1.png" alt="">
+                        <img class="desktop" src="../../assets/portfolio_fotos/project 5/githubapi.png" alt="">
+                        <img class="desktop" src="../../assets/portfolio_fotos/project 5/githubapi1.png" alt="">
                     </div>
                 </div>
             </div> 
@@ -137,9 +137,9 @@
                         <p>Met deze wachtwoord generator wordt het kiezen van een nieuw wachtwoord een makkie! Hij creert snel een willekeurig combinatie van tekens die pas tot 30 tekens achter elkaar lang kan zijn! Er kunnen tevens verschillende instellingen aangepast worden, waaronder nummers of hoofdletters uitsluiten. Gemaakt met vanilla Javascript. Zie het hele project op mijn Github profiel.</p>
                     </div>
                     <div class="fotos">
-                        <img class="desktop" src="./assets/portfolio_fotos/project 6/rpg.png" alt="">
-                        <img class="desktop" src="./assets/portfolio_fotos/project 6/rpg1.png" alt="">
-                        <img class="desktop" src="./assets/portfolio_fotos/project 6/rpg2.png" alt="">
+                        <img class="desktop" src="../../assets/portfolio_fotos/project 6/rpg.png" alt="">
+                        <img class="desktop" src="../../assets/portfolio_fotos/project 6/rpg1.png" alt="">
+                        <img class="desktop" src="../../assets/portfolio_fotos/project 6/rpg2.png" alt="">
                     </div>
                 </div>
             </div> 
