--- a/website/html/contact.html
+++ b/website/html/contact.html
@@ -48,7 +48,7 @@
                                     <p>E-mail mij</p>
                                 </h3>
                                 <div class="kaartje_p">
-                                    <p><strong>patriciapodhradska1@gmail.com</strong></p>
+                                    <a href="mailto:patriciapodhradska1@gmail.com"><strong>patriciapodhradska1@gmail.com</strong></a>
                                 </div>
                                 <hr>
                             </div>
@@ -65,7 +65,7 @@
                                     <p>Bel mij</p>
                                 </h3>
                                 <div class="kaartje_p">
-                                    <p><strong>+31 6 49123302</strong></p>
+                                    <a href="tel:+31649123302"><strong>+31 6 49123302</strong></a>
                                     <!-- <p class="vestiging">Gevestigd in: Amersfoort, Nederland</p> -->
                                 </div>
                                 <hr>
