--- a/website/html/portfolio.html
+++ b/website/html/portfolio.html
@@ -28,7 +28,7 @@
     <section>
         <div class="section__container">
             <div class="pf_inleiding"> 
-                <p>Onderaan vind je mijn recent werk. Mijn focus op lange termijn ligt in full-stack en mobiele applicaties ontwikkeling. Ik maak verschillende projecten, waaronder websites en kleine projecten en maak vaak gebruik van javascript, react of nodejs.</p>
+                <p>Onderaan vind je mijn recent werk. Mijn focus op lange termijn ligt in full-stack ontwikkeling en mobiele applicaties. Ik maak verschillende projecten, waaronder websites en kleine projecten en maak vaak gebruik van javascript, react of nodejs.</p>
                 <h1>Mijn werk</h1>
                 <hr>
             </div>
